# Hackathon-ll-Phase1

./: .gitignore  API_SETUP_SUMMARY.md  PHASE_III_COMPLETION_SUMMARY.md  README.md  pyproject.toml  run_backend_server.py  run_server.py  start_server.py  test_ai_agent.py  test_ai_agent_final.py  test_ai_agent_structure.py  test_openrouter_fix.py  test_registration.py  tmpclaude-a50d-cwd  todo_app.db  todo_test.db
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: pyproject.toml  tmpclaude-708a-cwd  todo.db  todo.db.backup
backend/src/: config.py  database.py  main.py
backend/src/agents/: __init__.py  ai_agent.py  mcp_server.py  tools.py
backend/src/api/: ai_agent_api.py  auth.py  tasks.py
backend/src/database/: ai_agent_db.py
backend/src/middleware/: auth.py
backend/src/models/: agent_response.py  ai_agent_session.py  mcp_tool_call.py  task.py  user.py  user_request.py
backend/src/schemas/: task.py  todo_schemas.py  user.py
backend/src/services/: task_service.py  todo_services.py  user_service.py
backend/src/utils/: auth.py  helpers.py  password.py  responses.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
phase/: package-lock.json  package.json
specs/001-ai-agent-mcp-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-task-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-todo-auth/: data-model.md  (+5 more)
src/: __init__.py
(+49 files in other folders)
