[project]
name = "todo-app"
version = "0.1.0"
description = "A simple CLI Todo application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo-app = "src.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.cli", "src.models", "src.services"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''